<resources>
    <string name="app_name">ProxiAlert</string>
    <string name="action_settings">Settings</string>
    <string name="activity_title_home">Tasks</string>
    <string name="msg_no_tasks">No tasks found!</string>
    <string name="lbl_new_task_title">New Task</string>
    <string name="lbl_edit_task_title">Edit Task</string>
    <string name="hint_enter_task">Enter your task\'s name!</string>
    <string name="hint_enter_address">Enter location of task.</string>
    <string name="hint_enter_due_date">Enter the Task Due Date</string>
    <string name="hint_enter_radius">Distance</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_dark_theme">Dark Theme</string>
    <string name="pref_description_dark_theme">Make the Background Dark!
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_default_units_name">Add friends to messages</string>
    <string-array name="pref_default_units">

    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string-array name="default_units_list">

        <item>Km</item>
        <item>Miles</item>
        <item>Feet</item>
        <item>Meters</item>
        <item>None</item>

    </string-array>

    <string-array name="default_units_list_values">

        <item>Km</item>
        <item>Miles</item>
        <item>Feet</item>
        <item>Meters</item>
        <item>Units...</item>

    </string-array>
    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_maps">Map</string>
    <string name="setLocation">Set Location</string>
    <string name="save">Save</string>
    <string name= "MapView"> Show Map of Tasks</string>
</resources>